syntax = "proto3";

option java_package = "me.stageguard.aruku.preference.proto";
option java_multiple_files = false;
option java_generate_equals_and_hash = true;

message Accounts {
  map<int64, AccountInfo> account = 1;

  message AccountInfo {
    int64 account_no = 1;
    string password_md5 = 2;
    login_protocol protocol = 3;
    bool auto_reconnect = 4;
    heartbeat_strategy heartbeat_strategy = 5;
    int64 heartbeat_period_millis = 6;
    int64 heartbeat_timeout_millis = 7;
    int64 stat_heartbeat_period_millis = 8;
    int32 reconnection_retry_times = 9;
  }

  enum login_protocol {
    ANDROID_PHONE = 0;
    ANDROID_PAD = 1;
    ANDROID_WATCH = 2;
    IPAD = 3;
    MACOS = 4;
  }

  enum heartbeat_strategy {
    STAT_HB = 0;
    REGISTER = 1;
    NONE = 2;
  }
}